<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/very_large_padding_size">

            <Button
                android:id="@+id/signup_facebook_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/com_facebook_button_background"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="@dimen/very_small_text_size"
                android:text="@string/sign_up_with_facebook"
                android:layout_marginBottom="@dimen/medium_padding_size"
                android:layout_marginLeft="@dimen/very_large_padding_size"
                android:layout_marginRight="@dimen/very_large_padding_size"
                android:drawableLeft="@drawable/facebook_button_icon"
                android:gravity="center"
                android:paddingLeft="@dimen/medium_padding_size"
                android:paddingRight="@dimen/medium_padding_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_username_and_pswd_txt"
                android:textColor="@android:color/black"
                android:textSize="@dimen/very_small_text_size"
                android:paddingTop="@dimen/medium_padding_size"
                android:paddingBottom="@dimen/medium_padding_size"/>



            <EditText
                android:id="@+id/signup_user_email_lbl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_edit_txt_height"
                android:padding="@dimen/small_padding_size"
                android:background="@drawable/search_rectangle"
                android:hint="Email"
                android:textSize="@dimen/very_small_text_size"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/edittext_hint_clr"/>


            <EditText
                android:id="@+id/signup_password_lbl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_edit_txt_height"
                android:padding="@dimen/small_padding_size"
                android:background="@drawable/search_rectangle"
                android:layout_marginTop="@dimen/large_padding_size"
                android:hint="@string/password_txt"
                android:textSize="@dimen/very_small_text_size"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColorHint="@color/edittext_hint_clr"/>


            <EditText
                android:id="@+id/signup_reenter_password_lbl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_edit_txt_height"
                android:padding="@dimen/small_padding_size"
                android:background="@drawable/search_rectangle"
                android:layout_marginTop="@dimen/large_padding_size"
                android:hint="@string/pwd_conformation"
                android:textSize="@dimen/very_small_text_size"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColorHint="@color/edittext_hint_clr"
                android:inputType="textPassword"/>




          <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/agree_age_txt"
                android:textSize="@dimen/signup_cond_txt_size"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:visibility="gone"
                android:button="@null"
                android:drawableLeft="@drawable/signup_checkbox_img"
                android:drawablePadding="10dp"
              />


          <CheckBox
              android:id="@+id/signup_accept_tos_chkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/agreetext"
                android:textSize="@dimen/signup_cond_txt_size"
                android:paddingTop="@dimen/large_padding_size"
                android:paddingBottom="@dimen/large_padding_size"
                android:layout_marginTop="@dimen/medium_padding_size"
                android:button="@null"
                android:drawableLeft="@drawable/signup_checkbox_img"
                android:drawablePadding="5dp"
                android:paddingLeft="5dp"
              android:visibility="gone"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_txt"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/large_padding_size"
                android:textSize="@dimen/very_small_text_size"
                android:textStyle="bold"
                android:visibility="gone"/>



        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="gone">

        <TextView
            android:id="@+id/terms_cond_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:paddingLeft="@dimen/very_large_padding_size"
            android:paddingRight="@dimen/very_large_padding_size"
            android:textSize="@dimen/signup_cond_txt_size"/>

    </ScrollView>

</LinearLayout>